experiments/tree-sitter-yt-sql/test/corpus/representative.txt
==================
Simple benchmark query
==================

SELECT id WHERE view_count >= 1000

---

(source_file
  (query
    (query_expression
      (query_primary
        (select_query
          (select_clause
            (select_keyword)
            (select_term
              (scalar_expression
                (postfix_expression
                  (scalar_atom
                    (identifier
                      (ordinary_identifier)))))))
          (where_clause
            (where_keyword)
            (boolean_expression
              (boolean_primary
                (predicate
                  (scalar_expression
                    (postfix_expression
                      (scalar_atom
                        (identifier
                          (ordinary_identifier)))))
                  (predicate_suffix
                    (comparison_operator)
                    (comparison_value
                      (scalar_expression
                        (postfix_expression
                          (scalar_atom
                            (scalar_literal
                              (number))))))))))))))))

==================
Complex benchmark query
==================

SELECT id, title, COALESCE(view_count, 0) AS views WHERE (view_count >= 1000 AND title ILIKE '%video%') OR (duration >= 60s AND upload_date >= 2025-01-01) ORDER BY view_count DESC, title ASC LIMIT 100 OFFSET 5

---

(source_file
  (query
    (query_expression
      (query_primary
        (select_query
          (select_clause
            (select_keyword)
            (select_term
              (scalar_expression
                (postfix_expression
                  (scalar_atom
                    (identifier
                      (ordinary_identifier))))))
            (select_term
              (scalar_expression
                (postfix_expression
                  (scalar_atom
                    (identifier
                      (ordinary_identifier))))))
            (select_term
              (scalar_expression
                (postfix_expression
                  (scalar_atom
                    (scalar_function
                      (multi_scalar_function
                        (coalesce_keyword))
                      (scalar_expression
                        (postfix_expression
                          (scalar_atom
                            (identifier
                              (ordinary_identifier)))))
                      (scalar_expression
                        (postfix_expression
                          (scalar_atom
                            (scalar_literal
                              (number)))))))))
              (as_keyword)
              (identifier
                (ordinary_identifier))))
          (where_clause
            (where_keyword)
            (boolean_expression
              (boolean_expression
                (boolean_primary
                  (parenthesised_boolean
                    (boolean_expression
                      (boolean_expression
                        (boolean_primary
                          (predicate
                            (scalar_expression
                              (postfix_expression
                                (scalar_atom
                                  (identifier
                                    (ordinary_identifier)))))
                            (predicate_suffix
                              (comparison_operator)
                              (comparison_value
                                (scalar_expression
                                  (postfix_expression
                                    (scalar_atom
                                      (scalar_literal
                                        (number))))))))))
                      (and_keyword)
                      (boolean_expression
                        (boolean_primary
                          (predicate
                            (scalar_expression
                              (postfix_expression
                                (scalar_atom
                                  (identifier
                                    (ordinary_identifier)))))
                            (predicate_suffix
                              (text_operator
                                (ilike_keyword))
                              (text_value
                                (literal_sequence
                                  (literal_piece
                                    (scalar_literal
                                      (string)))))))))))))
              (or_keyword)
              (boolean_expression
                (boolean_primary
                  (parenthesised_boolean
                    (boolean_expression
                      (boolean_expression
                        (boolean_primary
                          (predicate
                            (scalar_expression
                              (postfix_expression
                                (scalar_atom
                                  (identifier
                                    (ordinary_identifier)))))
                            (predicate_suffix
                              (comparison_operator)
                              (comparison_value
                                (scalar_expression
                                  (postfix_expression
                                    (scalar_atom
                                      (scalar_literal
                                        (unit_literal))))))))))
                      (and_keyword)
                      (boolean_expression
                        (boolean_primary
                          (predicate
                            (scalar_expression
                              (postfix_expression
                                (scalar_atom
                                  (identifier
                                    (ordinary_identifier)))))
                            (predicate_suffix
                              (comparison_operator)
                              (comparison_value
                                (scalar_expression
                                  (postfix_expression
                                    (scalar_atom
                                      (temporal_literal
                                        (date))))))))))))))))))
      (order_by_clause
        (order_keyword)
        (by_keyword)
        (order_term
          (scalar_expression
            (postfix_expression
              (scalar_atom
                (identifier
                  (ordinary_identifier)))))
          (desc_keyword))
        (order_term
          (scalar_expression
            (postfix_expression
              (scalar_atom
                (identifier
                  (ordinary_identifier)))))
          (asc_keyword)))
      (limit_clause
        (limit_keyword)
        (positive_integer_literal))
      (offset_clause
        (offset_keyword)
        (integer_literal)))))

==================
Collection benchmark query
==================

SELECT id, MAP(FILTER(tags AS tag WHERE tag IS NOT NULL) AS tag SELECT UPPER(tag)) AS normalised_tags WHERE ANY(tags AS tag WHERE tag = 'group-1')

---

(source_file
  (query
    (query_expression
      (query_primary
        (select_query
          (select_clause
            (select_keyword)
            (select_term
              (scalar_expression
                (postfix_expression
                  (scalar_atom
                    (identifier
                      (ordinary_identifier))))))
            (select_term
              (scalar_expression
                (postfix_expression
                  (scalar_atom
                    (collection_transform
                      (map_keyword)
                      (scalar_expression
                        (postfix_expression
                          (scalar_atom
                            (collection_transform
                              (filter_keyword)
                              (scalar_expression
                                (postfix_expression
                                  (scalar_atom
                                    (identifier
                                      (ordinary_identifier)))))
                              (as_keyword)
                              (identifier
                                (ordinary_identifier))
                              (where_keyword)
                              (boolean_expression
                                (boolean_primary
                                  (predicate
                                    (scalar_expression
                                      (postfix_expression
                                        (scalar_atom
                                          (identifier
                                            (ordinary_identifier)))))
                                    (predicate_suffix
                                      (is_keyword)
                                      (not_keyword)
                                      (null_keyword)))))))))
                      (as_keyword)
                      (identifier
                        (ordinary_identifier))
                      (select_keyword)
                      (scalar_expression
                        (postfix_expression
                          (scalar_atom
                            (scalar_function
                              (unary_scalar_function
                                (upper_keyword))
                              (scalar_expression
                                (postfix_expression
                                  (scalar_atom
                                    (identifier
                                      (ordinary_identifier)))))))))))))
              (as_keyword)
              (identifier
                (ordinary_identifier))))
          (where_clause
            (where_keyword)
            (boolean_expression
              (boolean_primary
                (collection_predicate
                  (any_keyword)
                  (scalar_expression
                    (postfix_expression
                      (scalar_atom
                        (identifier
                          (ordinary_identifier)))))
                  (as_keyword)
                  (identifier
                    (ordinary_identifier))
                  (where_keyword)
                  (boolean_expression
                    (boolean_primary
                      (predicate
                        (scalar_expression
                          (postfix_expression
                            (scalar_atom
                              (identifier
                                (ordinary_identifier)))))
                        (predicate_suffix
                          (comparison_operator)
                          (comparison_value
                            (scalar_expression
                              (postfix_expression
                                (scalar_atom
                                  (scalar_literal
                                    (string)))))))))))))))))))
